RESOLVED FIXED309215
Top scroll stretching should not stop color sampling of top edge
https://bugs.webkit.org/show_bug.cgi?id=309215
Summary Top scroll stretching should not stop color sampling of top edge
Lily Spiniolas
Reported 2026-03-04 19:38:25 PST
Attachments
Lily Spiniolas
Comment 1 2026-03-04 19:46:54 PST
EWS
Comment 2 2026-03-06 22:46:51 PST
Committed 308849@main (aa9d5ddfb18a): <https://commits.webkit.org/308849@main> Reviewed commits have been landed. Closing PR #59948 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.